-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Aggregation Framework
-
Fully Compatible
-
ALL
-
v5.1, v5.0, v4.4
-
QE 2021-10-18
-
15
-
None
-
None
-
None
-
None
-
None
-
None
-
None
One of our drivers spec tests has started failing when testing against "latest" sharded clusters with the following error:
PlanExecutor error during aggregation :: caused by :: failed while running command { internalRenameIfOptionsAndIndexesMatch: 1, from: "crud-v2.tmp.agg_out.20aa8895-2d27-49ac-ae5c-9fd62b3ba9f7", to: "crud-v2.other_test_collection", collectionOptions: {}, indexes: [ { v: 2, key: { _id: 1 }, name: "id" } ], writeConcern: { w: "majority", wtimeout: 0, provenance: "implicitDefault" } } :: caused by :: Request sent without attaching database version
I'm seeing this locally and on Evergreen against the "latest" build, which is currently v5.1.0-alpha-881-g17427b8.
I've reproduced this in mongosh as follows:
Enterprise [mongos] test> db.outTest.insertMany([{_id: 1, x: 11}, {_id: 2, x: 22}, {_id: 3, x: 33}])
{ acknowledged: true, insertedIds: { '0': 1, '1': 2, '2': 3 } }
Enterprise [mongos] test> db.outTest.aggregate([{$out: "outputColl"}], {readConcern: "available"})
MongoServerError: PlanExecutor error during aggregation :: caused by :: failed while running command { internalRenameIfOptionsAndIndexesMatch: 1, from: "test.tmp.agg_out.52b84e2e-8589-4b78-9d4a-46584ebae867", to: "test.outputColl", collectionOptions: {}, indexes: [], writeConcern: { w: "majority", wtimeout: 0, provenance: "implicitDefault" } } :: caused by :: Request sent without attaching database version
This seems related to the recent changes in SERVER-59756.
- is depended on by
-
GODRIVER-2155 Failing test: CRUD unified aggregate-out-readConcern readConcern available with out stage
-
- Closed
-
-
JAVA-4339 Evergreen: UnifiedCrudTest failures on latest
-
- Closed
-
-
NODE-3603 Failing test: CRUD unified aggregate-out-readConcern readConcern available with $out stage
-
- Closed
-
-
CDRIVER-4161 /crud/unified/aggregate-out-readConcern server error on sharded: "PlanExecutor error"
-
- Closed
-
-
PYTHON-2926 Unskip test_readConcern_available_with_out_stage on 5.1+
-
- Closed
-
- is related to
-
SERVER-48128 mapreduce and aggregation with output don't work on rs to cluster upgrade
-
- Closed
-
-
SERVER-53433 Map reduce is versioned on direct connection to shards
-
- Closed
-
-
SERVER-55565 Investigate if we can remove shard versioning logic if the parent Op is versioned
-
- Closed
-