SERVER-59924 Error executing aggregate with $out with "available" read concern on sharded clusters